Include Resource Library

--- a/index.html
+++ b/index.html
@@ -24,20 +24,43 @@
 	<div class="top-icons">
 		 <h1 class="logo">Judgle</h1>
 
+		<i class="fas fa-home home-icon" title="Home - Reset & Return to Quiz" onclick="goHome()"></i>
 		<i class="fas fa-adjust mode-toggle" title="Toggle Light/Dark Mode" onclick="toggleMode()"></i>
 		<i class="fas fa-undo reset-icon" title="Reset Quiz" onclick="restartQuiz()"></i>
 		<i class="fas fa-history history-icon" title="View History" id="historyButton" onclick="toggleVideoHistory()"></i>
+		<i class="fas fa-book resource-icon" title="Resource Library" onclick="toggleResourceLibrary()"></i>
 		<i class="fas fa-question-circle help-icon" title="Help" onclick="toggleHelpMenu()"></i>
 	
 	</div>
 	
-		 		<div id="helpMenu">
-			<p><i class="fas fa-adjust"></i> Light/Dark Mode</p>
-			<p><i class="fas fa-undo"></i> Reset Answers</p>
-			<p><i class="fas fa-history"></i> View Video History</p>
+	<div id="helpMenu">
+		<p><i class="fas fa-home"></i> Home (Reset & Return)</p>
+		<p><i class="fas fa-adjust"></i> Light/Dark Mode</p>
+		<p><i class="fas fa-undo"></i> Reset Answers</p>
+		<p><i class="fas fa-history"></i> View Video History</p>
+		<p><i class="fas fa-book"></i> Resource Library</p>
+	</div>
+
+	<!-- Resource Library Section -->
+	<div id="resourceLibrary" class="resource-library hidden">
+		<div class="resource-header">
+			<h2>Resource Library</h2>
+			<i class="fas fa-times resource-close-icon" title="Close Resource Library" onclick="toggleResourceLibrary()"></i>
+			<!--<button class="share-link-btn" onclick="copyResourceLink()" title="Copy shareable link to resource library">
+				<i class="fas fa-share-alt"></i> Share Resource Link
+			</button>-->
+			<div class="tag-filter-container">
+				<span class="filter-label">Filter by tag:</span>
+				<div id="tagFilters" class="tag-filters"></div>
+				<button class="clear-filters-btn" onclick="clearTagFilters()">Clear Filters</button>
+			</div>
 		</div>
-	
-	    <div class="container">
+		<div id="resourceGrid" class="resource-grid"></div>
+	</div>
+
+	<!-- Main Content -->
+	<div id="mainContent">
+		<div class="container">
 			<!-- Video Library -->
 			<div class="container">
 				<div class="video-list">
@@ -64,38 +87,39 @@
 		</div>
 		
 		<div class="container">
-        <!-- Number Input Section -->
-        <div>
-            <h3>Enter Your Deductions:</h3>
-            <form id="quizForm">
-                <div id="inputContainer">
-                    <!-- Input fields will be dynamically generated here -->
-                </div>
-                <br>
-                <button type="button" id="submitButton" class="button" onclick="checkAnswers()">Submit</button>
-            </form>
+			<!-- Number Input Section -->
+			<div>
+				<h3>Enter Your Deductions:</h3>
+				<form id="quizForm">
+					<div id="inputContainer">
+						<!-- Input fields will be dynamically generated here -->
+					</div>
+					<br>
+					<button type="button" id="submitButton" class="button" onclick="checkAnswers()">Submit</button>
+				</form>
 
-            <!-- Result Section -->
-            <div class="result" id="result"></div>
-        </div>
+				<!-- Result Section -->
+				<div class="result" id="result"></div>
+			</div>
 
-        <!-- Answer Table -->
-        <table class="answer-table" id="answerTable" style="display:none;">
-            <thead>
-                <tr>
-                    <th>Element</th>
-                    <th>Your Deduction</th>
-                    <th>Correct Deduction</th>
-                    <th>Explanation</th>
-                </tr>
-            </thead>
-            <tbody id="answerTableBody">
-                <!-- Answer details will be added dynamically here -->
-            </tbody>
-        </table>
-    </div>
-	<div class="container">
-	<h5>Development in Progress.  All scores are test scores and not relevant to the video shown. Created by Jed</h5>
+			<!-- Answer Table -->
+			<table class="answer-table" id="answerTable" style="display:none;">
+				<thead>
+					<tr>
+						<th>Element</th>
+						<th>Your Deduction</th>
+						<th>Correct Deduction</th>
+						<th>Explanation</th>
+					</tr>
+				</thead>
+				<tbody id="answerTableBody">
+					<!-- Answer details will be added dynamically here -->
+				</tbody>
+			</table>
+		</div>
+		<div class="container">
+			<h5>Development in Progress.  All scores are test scores and not relevant to the video shown. Created by Jed</h5>
+		</div>
 	</div>
     <script>
         
@@ -211,6 +235,50 @@
 				releaseDate: "2025-03-17"
             }
         };
+
+		// Resource Library Data
+		const resourceData = [
+			/*{
+				id: 'res3',
+				type: 'video',
+				title: 'How to Use HD Software',
+				description: 'Complete guide to using the HD judging software for competitions',
+				videoId: 'dQw4w9WgXcQ', // Replace with actual YouTube video ID
+				tags: ['CJP', 'HDTS']
+			},
+			{
+				id: 'res4',
+				type: 'video',
+				title: 'Using the Backup System',
+				description: 'Step-by-step instructions for the backup procedure',
+				videoId: 'dQw4w9WgXcQ', // Replace with actual YouTube video ID
+				tags: ['CJP']
+			},
+			{
+				id: 'res5',
+				type: 'video',
+				title: 'Video Replay Software Tutorial',
+				description: 'Learn how to use the video replay software effectively',
+				videoId: 'dQw4w9WgXcQ', // Replace with actual YouTube video ID
+				tags: ['CJP', 'DD', 'Software']
+			},*/
+			{
+				id: 'res1',
+				type: 'pdf',
+				title: 'Competition Information Sheets',
+				description: 'Essential information sheets for competition judges',
+				url: 'https://drive.google.com/file/d/1c97Evq53z6jOxgvf_FqmSsjBGzmwubA_/view?usp=sharing',
+				tags: ['CJP', 'DD']
+			},
+			{
+				id: 'res2',
+				type: 'pdf',
+				title: 'Execution One-Pager',
+				description: 'Quick reference guide for execution scoring',
+				url: 'https://drive.google.com/file/d/1gWkP7un3DrwY4vEtg-dvHfzlKpZ1oK4P/view?usp=sharing',
+				tags: ['Execution']
+			}
+		];
 		
         // Valid entries for each box
         const validEntries = {
@@ -220,17 +288,30 @@
 		
 		const videoKeys = Object.keys(videoData);
 		currentVideoId = videoKeys[videoKeys.length - 1]; // Last video
+		let activeTagFilters = [];
 
 		
 		window.onload = () => {
-		if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
-			document.body.classList.add('dark-mode');
-		}
+			if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+				document.body.classList.add('dark-mode');
+			}
 			const availableVideos = getAvailableVideos();
 
 			currentVideoId = availableVideos[availableVideos.length-1];
 			loadVideo(currentVideoId);
 			populateHistoryList();
+			initializeResourceLibrary();
+
+			// Check URL parameter for direct resource library access
+			const urlParams = new URLSearchParams(window.location.search);
+			if (urlParams.get('view') === 'resources') {
+				// Open resource library directly
+				const resourceLibrary = document.getElementById('resourceLibrary');
+				const mainContent = document.getElementById('mainContent');
+				mainContent.style.display = 'none';
+				resourceLibrary.classList.remove('hidden');
+				resourceLibrary.classList.add('fade-in');
+			}
 		};
 		
 		function toggleHelpMenu() {
@@ -247,6 +328,219 @@
 					helpMenu.classList.add("show");
 				}, 10); // Small delay to trigger fade-in
 			}
+		}
+
+		// Resource Library Functions
+		function toggleResourceLibrary() {
+			const resourceLibrary = document.getElementById('resourceLibrary');
+			const mainContent = document.getElementById('mainContent');
+			
+			if (resourceLibrary.classList.contains('hidden')) {
+				// Show resource library
+				mainContent.classList.add('fade-out');
+				setTimeout(() => {
+					mainContent.style.display = 'none';
+					resourceLibrary.classList.remove('hidden');
+					resourceLibrary.classList.add('fade-in');
+					// Update URL without reloading page
+					history.pushState({view: 'resources'}, '', '?view=resources');
+				}, 300);
+			} else {
+				// Show main content
+				resourceLibrary.classList.remove('fade-in');
+				resourceLibrary.classList.add('fade-out');
+				setTimeout(() => {
+					resourceLibrary.classList.add('hidden');
+					resourceLibrary.classList.remove('fade-out');
+					mainContent.style.display = 'block';
+					mainContent.classList.remove('fade-out');
+					mainContent.classList.add('fade-in');
+					// Update URL to remove parameter
+					history.pushState({view: 'quiz'}, '', window.location.pathname);
+				}, 300);
+			}
+		}
+
+		// Handle browser back/forward buttons
+		window.addEventListener('popstate', function(event) {
+			const resourceLibrary = document.getElementById('resourceLibrary');
+			const mainContent = document.getElementById('mainContent');
+			const urlParams = new URLSearchParams(window.location.search);
+			
+			if (urlParams.get('view') === 'resources') {
+				// Show resources
+				if (resourceLibrary.classList.contains('hidden')) {
+					mainContent.style.display = 'none';
+					resourceLibrary.classList.remove('hidden');
+					resourceLibrary.classList.add('fade-in');
+				}
+			} else {
+				// Show main content
+				if (!resourceLibrary.classList.contains('hidden')) {
+					resourceLibrary.classList.add('hidden');
+					mainContent.style.display = 'block';
+					mainContent.classList.add('fade-in');
+				}
+			}
+		});
+
+		function initializeResourceLibrary() {
+			generateTagFilters();
+			renderResources();
+		}
+
+		function generateTagFilters() {
+			const allTags = new Set();
+			resourceData.forEach(resource => {
+				resource.tags.forEach(tag => allTags.add(tag));
+			});
+
+			const tagFiltersContainer = document.getElementById('tagFilters');
+			tagFiltersContainer.innerHTML = '';
+
+			allTags.forEach(tag => {
+				const tagButton = document.createElement('button');
+				tagButton.className = 'tag-filter-btn';
+				tagButton.textContent = tag;
+				tagButton.onclick = () => toggleTagFilter(tag, tagButton);
+				tagFiltersContainer.appendChild(tagButton);
+			});
+		}
+
+		function toggleTagFilter(tag, button) {
+			if (activeTagFilters.includes(tag)) {
+				activeTagFilters = activeTagFilters.filter(t => t !== tag);
+				button.classList.remove('active');
+			} else {
+				activeTagFilters.push(tag);
+				button.classList.add('active');
+			}
+			renderResources();
+		}
+
+		function clearTagFilters() {
+			activeTagFilters = [];
+			document.querySelectorAll('.tag-filter-btn').forEach(btn => {
+				btn.classList.remove('active');
+			});
+			renderResources();
+		}
+
+		function renderResources() {
+			const resourceGrid = document.getElementById('resourceGrid');
+			resourceGrid.innerHTML = '';
+
+			// Filter resources
+			let filteredResources = resourceData;
+			if (activeTagFilters.length > 0) {
+				filteredResources = resourceData.filter(resource => 
+					activeTagFilters.some(tag => resource.tags.includes(tag))
+				);
+			}
+
+			// Sort: unwatched first, then watched
+			const watchedStatus = JSON.parse(localStorage.getItem('watchedResources')) || {};
+			filteredResources.sort((a, b) => {
+				const aWatched = watchedStatus[a.id] || false;
+				const bWatched = watchedStatus[b.id] || false;
+				return aWatched - bWatched;
+			});
+
+			// Render resources
+			filteredResources.forEach(resource => {
+				const resourceCard = createResourceCard(resource, watchedStatus[resource.id] || false);
+				resourceGrid.appendChild(resourceCard);
+			});
+
+			if (filteredResources.length === 0) {
+				resourceGrid.innerHTML = '<p class="no-resources">No resources match the selected filters.</p>';
+			}
+		}
+
+		function createResourceCard(resource, isWatched) {
+			const card = document.createElement('div');
+			card.className = 'resource-card';
+			if (isWatched) card.classList.add('watched');
+
+			const watchIcon = document.createElement('div');
+			watchIcon.className = 'watch-status';
+			watchIcon.innerHTML = isWatched ? '<i class="fas fa-check-circle"></i>' : '<i class="far fa-circle"></i>';
+			watchIcon.onclick = () => toggleWatchStatus(resource.id);
+
+			const title = document.createElement('h3');
+			title.textContent = resource.title;
+
+			const description = document.createElement('p');
+			description.className = 'resource-description';
+			description.textContent = resource.description;
+
+			const tagsContainer = document.createElement('div');
+			tagsContainer.className = 'resource-tags';
+			resource.tags.forEach(tag => {
+				const tagSpan = document.createElement('span');
+				tagSpan.className = 'resource-tag';
+				tagSpan.textContent = tag;
+				tagsContainer.appendChild(tagSpan);
+			});
+
+			let contentElement;
+			if (resource.type === 'video') {
+				contentElement = document.createElement('div');
+				contentElement.className = 'resource-video';
+				contentElement.innerHTML = `
+					<iframe 
+						src="https://www.youtube.com/embed/${resource.videoId}" 
+						frameborder="0" 
+						allowfullscreen
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+					></iframe>
+				`;
+			} else if (resource.type === 'pdf') {
+				contentElement = document.createElement('a');
+				contentElement.className = 'resource-link';
+				contentElement.href = resource.url;
+				contentElement.target = '_blank';
+				contentElement.innerHTML = '<i class="fas fa-file-pdf"></i> Open PDF';
+			} else if (resource.type === 'link') {
+				contentElement = document.createElement('a');
+				contentElement.className = 'resource-link';
+				contentElement.href = resource.url;
+				contentElement.target = '_blank';
+				contentElement.innerHTML = '<i class="fas fa-external-link-alt"></i> Open Link';
+			}
+
+			card.appendChild(watchIcon);
+			card.appendChild(title);
+			card.appendChild(description);
+			card.appendChild(tagsContainer);
+			card.appendChild(contentElement);
+
+			return card;
+		}
+
+		function toggleWatchStatus(resourceId) {
+			const watchedStatus = JSON.parse(localStorage.getItem('watchedResources')) || {};
+			watchedStatus[resourceId] = !watchedStatus[resourceId];
+			localStorage.setItem('watchedResources', JSON.stringify(watchedStatus));
+			renderResources();
+		}
+
+		function copyResourceLink() {
+			const url = window.location.origin + window.location.pathname + '?view=resources';
+			navigator.clipboard.writeText(url).then(() => {
+				// Show a temporary success message
+				const btn = document.querySelector('.share-link-btn');
+				const originalHTML = btn.innerHTML;
+				btn.innerHTML = '<i class="fas fa-check"></i> Link Copied!';
+				btn.style.background = '#28a745';
+				setTimeout(() => {
+					btn.innerHTML = originalHTML;
+					btn.style.background = '';
+				}, 2000);
+			}).catch(err => {
+				// Fallback for older browsers
+				alert('Copy this link: ' + url);
+			});
 		}
 						
 		// Get available videos (released ones)
@@ -502,6 +796,38 @@
 
 		function formatVideoTitle(videoId) {
 			return videoData[videoId].title;
+		}
+		
+		function goHome() {
+			// Hide resource library if it's open
+			const resourceLibrary = document.getElementById('resourceLibrary');
+			const mainContent = document.getElementById('mainContent');
+			
+			if (!resourceLibrary.classList.contains('hidden')) {
+				resourceLibrary.classList.add('hidden');
+				mainContent.style.display = 'block';
+			}
+			
+			// Close video history if it's open
+			const hiddenVideos = document.getElementById('hiddenVideos');
+			if (hiddenVideos.style.display !== 'none') {
+				hiddenVideos.classList.remove('show');
+				hiddenVideos.style.display = 'none';
+			}
+			
+			// Reset quiz answers
+			restartQuiz();
+			
+			// Load the latest video
+			const availableVideos = getAvailableVideos();
+			const latestVideoId = availableVideos[availableVideos.length - 1];
+			loadVideo(latestVideoId);
+			
+			// Update URL to remove any parameters
+			history.pushState({view: 'quiz'}, '', window.location.pathname);
+			
+			// Scroll to top
+			window.scrollTo({ top: 0, behavior: 'smooth' });
 		}
 		
 
