Update resource description

--- a/index.html
+++ b/index.html
@@ -266,15 +266,15 @@
 				id: 'res1',
 				type: 'pdf',
 				title: 'Competition Information Sheets',
-				description: 'Essential information sheets for competition judges',
+				description: 'Essential information sheets for CJP/DD Rules, and ToF Machine functionality',
 				url: 'https://drive.google.com/file/d/1c97Evq53z6jOxgvf_FqmSsjBGzmwubA_/view?usp=sharing',
 				tags: ['CJP', 'DD']
 			},
 			{
 				id: 'res2',
 				type: 'pdf',
-				title: 'Execution One-Pager',
-				description: 'Quick reference guide for execution scoring',
+				title: 'Execution Reference Guide',
+				description: 'Quick reference guide for execution judging for each discipline',
 				url: 'https://drive.google.com/file/d/1gWkP7un3DrwY4vEtg-dvHfzlKpZ1oK4P/view?usp=sharing',
 				tags: ['Execution']
 			}
