--- a/index.html
+++ b/index.html
@@ -238,30 +238,30 @@
 
 		// Resource Library Data
 		const resourceData = [
-			/*{
+			{
 				id: 'res3',
 				type: 'video',
-				title: 'How to Use HD Software',
-				description: 'Complete guide to using the HD judging software for competitions',
-				videoId: 'dQw4w9WgXcQ', // Replace with actual YouTube video ID
-				tags: ['CJP', 'HDTS']
+				title: 'TRP Instability Deductions - No Deduction',
+				description: 'A compilation of routine finishes with no outbounce or stability deductions',
+				videoId: '6NX9BeV8r2o', // Replace with actual YouTube video ID
+				tags: ['Execution']
 			},
 			{
 				id: 'res4',
 				type: 'video',
-				title: 'Using the Backup System',
-				description: 'Step-by-step instructions for the backup procedure',
-				videoId: 'dQw4w9WgXcQ', // Replace with actual YouTube video ID
-				tags: ['CJP']
+				title: 'TRP Instability Deductions - 0.1 Deduction',
+				description: 'A compilation of routine finishes with 0.1 for outbounce or stability deductions',
+				videoId: '1RbzrN0n8dE', // Replace with actual YouTube video ID
+				tags: ['Execution']
 			},
 			{
 				id: 'res5',
 				type: 'video',
-				title: 'Video Replay Software Tutorial',
-				description: 'Learn how to use the video replay software effectively',
+				title: 'TRP Instability Deductions - 0.2 Deduction',
+				description: 'A compilation of routine finishes with 0.1 for outbounce or stability deductions',
 				videoId: 'dQw4w9WgXcQ', // Replace with actual YouTube video ID
-				tags: ['CJP', 'DD', 'Software']
-			},*/
+				tags: ['Execution']
+			},
 			{
 				id: 'res1',
 				type: 'pdf',
@@ -276,6 +276,46 @@
 				title: 'Execution Reference Guide',
 				description: 'Quick reference guide for execution judging for each discipline',
 				url: 'https://drive.google.com/file/d/1gWkP7un3DrwY4vEtg-dvHfzlKpZ1oK4P/view?usp=sharing',
+				tags: ['Execution']
+			},
+			{
+				id: 'res6',
+				type: 'video',
+				title: 'DMT Instability Deductions - No Deduction',
+				description: 'A compilation of routine finishes with no deductions for instability',
+				videoId: 'Nxg5WjYFfvM', // Replace with actual YouTube video ID
+				tags: ['Execution']
+			},
+			{
+				id: 'res7',
+				type: 'video',
+				title: 'DMT Instability Deductions - 0.1 Deduction',
+				description: 'A compilation of routine finishes with 0.1 deduction for instability',
+				videoId: 'ljnwU-s5pi8', // Replace with actual YouTube video ID
+				tags: ['Execution']
+			},
+			{
+				id: 'res8',
+				type: 'video',
+				title: 'DMT Instability Deductions - 0.2 Deduction',
+				description: 'A compilation of routine finishes with 0.2 deduction for instability',
+				videoId: 'HJF5reAIkU4', // Replace with actual YouTube video ID
+				tags: ['Execution']
+			},
+			{
+				id: 'res9',
+				type: 'video',
+				title: 'DMT Instability Deductions - 0.3 Deduction',
+				description: 'A compilation of routine finishes with 0.3 deduction for instability',
+				videoId: '4P8YqcmX1xk', // Replace with actual YouTube video ID
+				tags: ['Execution']
+			},
+			{
+				id: 'res10',
+				type: 'video',
+				title: 'DMT Instability Deductions - 1.0 Deduction',
+				description: 'A compilation of routine finishes with 1.0 deduction for instability',
+				videoId: '9QfVUR-8ZpY', // Replace with actual YouTube video ID
 				tags: ['Execution']
 			}
 		];
